Frustrum Culling works!

--- a/template_P3.csproj
+++ b/template_P3.csproj
@@ -71,6 +71,7 @@
     <Compile Include="mesh.cs" />
     <Compile Include="meshLoader.cs" />
     <Compile Include="Node.cs" />
+    <Compile Include="Plane.cs" />
     <Compile Include="quad.cs" />
     <Compile Include="rendertarget.cs" />
     <Compile Include="SceneGraph.cs" />
