Color cube works

--- a/template_P3.csproj
+++ b/template_P3.csproj
@@ -80,6 +80,7 @@
     <Compile Include="surface.cs" />
     <Compile Include="template.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="texture3d.cs" />
     <Compile Include="texture.cs" />
   </ItemGroup>
   <ItemGroup>
